--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring?useTimezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
  
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true 
