Inclusão do serviço de E-mail em HTML

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 defaut.sender=realmeida100@gmail.com
 default.recipient=renanalmeida1991@yahoo.com.br
